<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:icon="@drawable/ic_text"
        android:title="@string/text_settings">

        <ListPreference
            android:defaultValue="false"
            android:entries="@array/text_color"
            android:entryValues="@array/text_color_values"
            android:icon="@drawable/ic_color"
            android:key="@string/list_key_text_color_name"
            android:summary="@string/text_color_note_name"
            android:title="@string/text_color_name" />
        <ListPreference
            android:defaultValue="#FF000000"
            android:entries="@array/text_color"
            android:entryValues="@array/text_color_values"
            android:key="@string/list_key_text_color_sec_name"
            android:icon="@drawable/ic_color"
            android:summary="@string/text_color_note_sec_name"
            android:title="@string/text_color_sec_name" />
        <ListPreference
            android:defaultValue="#FF000000"
            android:entries="@array/text_color"
            android:entryValues="@array/text_color_values"
            android:key="@string/list_key_text_color_tel"
            android:title="@string/text_color_tel"
            android:summary="@string/text_color_note_tel"
            android:icon="@drawable/ic_color"/>
    </PreferenceCategory>
</PreferenceScreen>