<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/client"
            android:icon="@drawable/ic_client"
            android:title="@string/client" />
        <item
            android:id="@+id/special"
            android:icon="@drawable/ic_imp"
            android:title="@string/special" />
    </group>
    <item android:title="@string/title">
        <menu>
            <item
            android:id="@+id/important"
            android:icon="@drawable/ic_happy"
            android:title="@string/important" />
            <item
            android:id="@+id/normal"
            android:icon="@drawable/ic_med"
            android:title="@string/normal" />
            <item
            android:id="@+id/no_important"
            android:icon="@drawable/ic_sad"
            android:title="@string/no_important" />
        </menu>
    </item>
    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/gen_set"
                android:icon="@drawable/ic_set"
                android:title="@string/gen_set" />
            <item
                android:id="@+id/web"
                android:icon="@drawable/ic_web"
                android:title="@string/web" />
        </menu>
    </item>
</menu>